[gd_scene load_steps=9 format=2]

[ext_resource path="res://wallButton.gd" type="Script" id=1]
[ext_resource path="res://pixel.png" type="Texture" id=2]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=12]
size = 20
outline_color = Color( 0.627451, 0.627451, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=11]
default_font = SubResource( 12 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 90, 53 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.627451, 0.627451, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("text:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.117647, 0.117647, 0.380392, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "clicked"
length = 0.15
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.627451, 0.627451, 1, 1 ), Color( 0.117647, 0.117647, 0.380392, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("text:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.117647, 0.117647, 0.380392, 1 ), Color( 0.627451, 0.627451, 1, 1 ) ]
}

[node name="wallButton" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.627451, 0.627451, 1, 1 )
position = Vector2( 90, 53 )
texture = ExtResource( 2 )

[node name="text" type="Label" parent="."]
anchor_bottom = 1.0
margin_right = 180.0
margin_bottom = 106.0
theme = SubResource( 11 )
custom_colors/font_color = Color( 0.117647, 0.117647, 0.380392, 1 )
text = "This Is Where The
Answer Would Go"
align = 1
valign = 1

[node name="clickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="clickArea"]
position = Vector2( 90, 53 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/clicked = SubResource( 9 )

[connection signal="mouse_entered" from="clickArea" to="." method="_on_clickArea_mouse_entered"]
[connection signal="mouse_exited" from="clickArea" to="." method="_on_clickArea_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
